<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_button">Open</string>
    <string name="read_btn">read file</string>
    <string name="write_btn">Write File</string>
    <string name="def_read_file">/sdcard/test_file</string>
    <string name="def_write_string">HELLO WORLD!</string>

</resources>